@@ -162,7 +162,8 @@ class RGMainWindow : public RGGladeWindow, public RPackageObserver {
 
    // helpers
    void pkgAction(RGPkgAction action);
-   bool askStateChange(RPackageLister::pkgState, vector<RPackage *> &exclude);
+   bool askStateChange(RPackageLister::pkgState, 
+                       const vector<RPackage *> &exclude = vector<RPackage*>());
    bool checkForFailedInst(vector<RPackage *> instPkgs);
    void pkgInstallHelper(RPackage *pkg, bool fixBroken = true, 
 			 bool reInstall = false);
