@@ -8,6 +8,8 @@ synaptic (0.71) UNRELEASED; urgency=low
     - read pindir as well as the pinfile (LP: #628818)
   * when reading markings, ensure the views are refreshed
     so that broken dependencies are displayed
+  * show /ask about the pkg state changes when reading selections
+    from a file, simpify askStateChanges code
 
   [ Luca Falavigna ]
   * common/rpackageview.cc:
